// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <Img> with isLoaded prop 1`] = `
<styled.div
  isLoaded={true}
  style={
    Object {
      "backgroundImage": "url(\\"image.jpg\\"",
    }
  }
/>
`;

exports[`should render <Img> without isLoaded prop 1`] = `
<styled.div
  isLoaded={false}
  style={
    Object {
      "backgroundImage": "url(\\"image.jpg\\"",
    }
  }
/>
`;
